--- a/面试题总结.md
+++ b/面试题总结.md
@@ -1,11 +1,11 @@
 ### 一些心得和总结
 1、由于疫情影响，基本都是视频面试了。百分之95都不用去现场，通几轮技术面到HR面都是网上进行的。使用的软件也是五花八门，瞩目，牛客网，微信视频，腾讯会议，或者各公司自己研发的视频软件。（伴鱼当时就邀请去现场面试，后来一想，路上太远，来回2小时，有这时间都能面两个了就拒了；然后京东1、2面过了以后3，4面邀请去的现场）
 
-2、面试真的很随机，完全看整个部门，尤其是面试官本身。
+2、面试真的很随机，完全看整个部门，尤其是面试官本身
 
 3、大厂好多都会问算法题，一般就是leetcode的简单题目
 
-4、手写题也很常见，比如bind，promise，promise all，防抖节流，深拷贝，发布订阅-EventEmitter，快排等
+4、手写题也很常见，比如bind，promise，promise all，防抖节流，深拷贝，发布订阅-EventEmitter，快排等（手写题可参考项目utils.js文件）
 
 ### 美团：
 
@@ -51,7 +51,7 @@ a.prototype
 请实现 reverseObject(obj, startIndex, endIndex) 方法。
 扩展题：如何做到算法复杂度最小
 
-示例：reverseObject(obj, 1, 50)
+示例：reverseObject(obj, 2, 5)
 
 const obj = {
   value: 12,
@@ -214,8 +214,100 @@ var stack1 = new Stack()
 var stack2 = new Stack()
 ```
 
-跟谁学-一面跪
+### 其他（promise相关的题目）
+
+#### 
+``` js
+// 1、axios请求失败的时候再重试一遍
+function axiosAutoTry(data) {
+  return new Promise((resolve, reject) => {
+    axios(data)
+      .then((data) => {
+        resolve(data);
+      })
+      .catch((error) => {
+        // 有重试次数
+        if (typeof data.__try_count == "number" && data.__try_count > 0) {
+          console.error("重试请求", error.message, data);
+          data.__try_count--;
+          return resolve(axiosAutoTry(data));
+        }
+        reject(error);
+      });
+  });
+}
+
+// 2、实现一个红绿灯
+// 要求实现：红灯亮(打印)3s后，绿灯亮(打印)2s后，黄灯亮(打印)1s后循环
+function log(num) {
+  let map = ["", "yellow", "green", "red"];
+  return new Promise((resolve, reject) => {
+    console.log(map[num], num);
+    setTimeout(() => {
+      if (num <= 1) num = 4;
+      resolve(num);
+    }, num * 1000);
+  });
+}
+function light(num) {
+  num--;
+  return new Promise((resolve, reject) => {
+    log(num).then((data) => {
+      light(data);
+    });
+  });
+}
+light(4);
+
+
+// 3、已知fetch 是新的请求接口方法. 如: 获取user我们可以像下面这样调用:
+fetch('/user').then(user => {})
+// 请将fetch封装为一个函数xFetch, 让fetch 支持超时后返回,超时异常。调用方法如下所示
+xFetch('/user', {timeout: 3000}).catch(err => {
+  if(err.code == -1) {
+    console.log('请求超时')
+  }
+});
+
+function xFetch(path, params) {
+  return new Promise((resolve, reject)=>{
+    fetch(path).then(data=>{
+      setTimeout(()=>{
+        if(data) {
+          resolve(data)
+        }
+        else {
+          reject({code: -1})
+        }
+      }, params.timeout)
+    })
+  })
+}
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+- 跟谁学-一面跪
+  - 面试的第一个公司，自己准备确实不够充分。自我介绍环节在介绍项目的时候，自己都可以感觉得到项目说的不是很顺溜。
 小米-二面跪
+  - 一面自认为面的还不错，二面从一开始就感觉和面试官聊得不在一个点上。一共面试一个多小时，除了自我介绍，剩下的时间就围绕两个事情讨论。我的某一个项目+算法题(两个队列实现一个栈)。项目聊了40分钟，就离谱。
 作业帮-一面跪
 探探-一面过，HR说联系我约二面，估计给忘记了
 完美世界洪恩教育-终面跪
